--- a/ng-wcs/package.json
+++ b/ng-wcs/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.5",
+    "@angular-devkit/schematics-cli": "^15.2.5",
     "@angular/cli": "~15.2.2",
     "@angular/compiler-cli": "^15.2.0",
     "@angular/elements": "^15.2.6",
