--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,8 @@ services:
       - 8080:80
     restart: always
     volumes:
-      - wp-uploads:/var/www/html/wp-content/uploads
+      - wp-content:/var/www/html/wp-content
+      - wp-uploads:/var/www/html/wp-content/uploads:rw
       - ./src/themes:/var/www/html/wp-content/themes
       - ./src/plugins:/var/www/html/wp-content/plugins
     environment:
@@ -33,3 +34,4 @@ services:
 volumes:
   db-data:
   wp-uploads:
+  wp-content:
