--- a/wcs/src/lit/tsconfig.json
+++ b/wcs/src/lit/tsconfig.json
@@ -15,7 +15,8 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
+  "include": ["../index.d.ts", "./*.ts"],
   "references": [{ "path": "../../tsconfig.node.json" }]
 }
