--- a/wcs/src/svelte/tsconfig.json
+++ b/wcs/src/svelte/tsconfig.json
@@ -14,6 +14,6 @@
     "checkJs": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "../index.d.ts"],
   "references": [{ "path": "../../tsconfig.node.json" }]
 }
